# vacation_calendar

./: .gitignore  README.md  manage.py  package-lock.json  package.json  pyproject.toml  pytest.cfg  pytest.ini  requirements.txt  serverless.yml
.github/workflows/: deploy.yml
calendarapp/: urls.py  views.py
employee_dashboard/: apps.py  urls.py  views.py
employees/: admin.py  models.py  urls.py  views.py
employees/migrations/: 0001_initial.py  0002_alter_employee_manager.py  0002_city_alter_employee_user_alter_employee_city.py  0003_alter_employee_city.py  0003_alter_employee_manager.py  0004_alter_employee_city.py  0004_alter_employee_manager.py  0005_alter_employee_city.py  0005_employee_employment_type_employee_start_date.py  0006_alter_employee_city.py  0006_alter_employee_start_date.py  0007_alter_city_options_alter_city_name_alter_city_state.py  0008_state_alter_employee_city_alter_city_state.py  0009_alter_employee_city.py  0010_alter_employee_city.py  0011_alter_employee_city.py  0014_alter_city_state.py  (+7 more)
manager/: urls.py  views.py
templates/: _alerts.html  add_event.html  base.html  calendar.html  dashboard.html  employee_calendar.html  events.html  login.html  register.html  register_login_base.html  style.css  transfer_days_request.html
tests/: conftest.py  test_admim_area.py  test_requests.py  test_requests_employee_view.py  test_requests_manager_view.py  test_unit_tests.py
vacation_calendar/: asgi.py  settings.py  urls.py  wsgi.py
vacation_planner/: asgi.py  settings.py  urls.py  wsgi.py
vacations/: admin.py  models.py  urls.py  views.py
(+73 files in other folders)
