[tool.poetry]
name = "calendar"
version = "1.0.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = ""
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2.2"
django-non-dark-admin = "^2.0.2"
pytest = "^7.4.0"
selenium = "^4.10.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
