[tool.poetry]
name = "calendar"
version = "1.0.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = ""
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django-non-dark-admin = "^2.0.2"
django = "^4.2.3"
parameterized = "^0.9.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
pytest = "^7.4.0"
selenium = "^4.11.2"
pytest-django = "^4.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "vacation_planner.settings"
python_files = ["tests/test_*.py"]
